--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -36,43 +36,43 @@
   </div>
 </div>
 
-<div class="labelOrg">CÁC BÊN KÝ</div>
+<div class="labelOrg">BÊN ĐIỀU PHỐI HỢP ĐỒNG</div>
 <div class="determine_contact">
-  <div class="user_contact">
-    <div class="label">TỔ CHỨC CỦA TÔI</div>
-    <div class="content_determine">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="form-group">
-            <div class="label_item">Người xem xét</div>
-            <div>
-              <div [innerHTML]="userViews" class="input_text"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-5">
-          <div class="form-group">
-            <div class="label_item">Người ký</div>
-            <div>
-              <div [innerHTML]="userSigns" class="input_text"></div>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--  <div class="user_contact">-->
+<!--    <div class="label">TỔ CHỨC CỦA TÔI</div>-->
+<!--    <div class="content_determine">-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-5">-->
+<!--          <div class="form-group">-->
+<!--            <div class="label_item">Người xem xét</div>-->
+<!--            <div>-->
+<!--              <div [innerHTML]="userViews" class="input_text"></div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-2"></div>-->
+<!--        <div class="col-md-5">-->
+<!--          <div class="form-group">-->
+<!--            <div class="label_item">Người ký</div>-->
+<!--            <div>-->
+<!--              <div [innerHTML]="userSigns" class="input_text"></div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="row">
-        <div class="col-md-5">
-          <div class="form-group">
-            <div class="label_item">Văn thư</div>
-            <div>
-              <div [innerHTML]="userDocs" class="input_text"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<!--      <div class="row">-->
+<!--        <div class="col-md-5">-->
+<!--          <div class="form-group">-->
+<!--            <div class="label_item">Văn thư</div>-->
+<!--            <div>-->
+<!--              <div [innerHTML]="userDocs" class="input_text"></div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="partner_contact">
     <div class="label">ĐỐI TÁC</div>
@@ -125,8 +125,8 @@
   </div>
   <div class="content_footer"></div>
   <div>
-    <button type="button" name="next" class="next draft-button">Lưu nháp</button>
-    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+<!--    <button type="button" name="next" class="next draft-button">Lưu nháp</button>-->
+    <button (click)="next()" style="width: 300px" type="button" name="next" class="next action-button pull-right">Xác nhận và gửi hợp đồng</button>
   </div>
 </div>
 
