--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -3,7 +3,7 @@
   <!--  information contract-->
   <div class="col-md-3 sample-contract__information" style="background-color: white; z-index: 10">
     <div class="sample-contract__information--drag" id="width-element-info" style="position: relative">
-      <label style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</label>
+      <div style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</div>
       <!--      <div>-->
       <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class"
            style="display: inline-block; margin-bottom: 15px">
