--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -14,7 +14,7 @@
        <div class="col-md-4">
           <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
           <div class="input-data">
-              <input type="text" formControlName="email">
+              <input type="text" formControlName="email" [readonly]="id != null">
           </div>
           <div *ngIf="submitted && f.email.errors" class="invalid">
             <div *ngIf="f.email.errors.required">Email không được để trống</div>
@@ -37,6 +37,7 @@
           </div>
           <div *ngIf="submitted && f.phone.errors" class="invalid">
             <div *ngIf="f.phone.errors.required">Số điện thoại không được để trống</div>
+            <div *ngIf="f.phone.errors.pattern">Số điện thoại sai định dạng</div>
           </div>
        </div>
        <div class="col-md-4">
@@ -51,7 +52,8 @@
             placeholder="Chọn tổ chức" 
             [filter]="true" 
             filterBy="name" 
-            [showClear]="true"  
+            [showClear]="id != null?false:true"
+            [readonly]="id != null"  
             ></p-dropdown>
          </div>
           <div *ngIf="submitted && f.organizationId.errors" class="invalid">
