--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -18,7 +18,34 @@
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
-    <p-table [value]="list" [paginator]="true" [rows]="10" id="table">
+    <p-treeTable [value]="array_empty"  [paginator]="true" [rows]="5" id="table" >
+      <ng-template pTemplate="header" let-columns>
+      <tr> 
+        <th *ngFor="let col of cols" [ttSortableColumn]="col.field">
+        {{col.header}}
+        <p-treeTableSortIcon [field]="col.field"></p-treeTableSortIcon>
+        </th>
+      </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
+        <tr>
+          <td>
+              <p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler>
+              <a style="color: #106DB6;">{{rowData.name}}</a>
+          </td>
+          <td>{{rowData.size}}</td>
+          <td>{{rowData.type}}</td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="paginatorleft" let-state>
+        <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+      </ng-template>
+      <ng-template pTemplate="paginatorright" let-state>
+        {{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}
+      </ng-template> 
+    </p-treeTable>
+
+    <p-table [value]="array_empty" [paginator]="true" [rows]="10" id="table">
       <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let col of cols" [style]='col.style'>
