--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -18,23 +18,24 @@
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
-    <p-treeTable [value]="array_empty"  [paginator]="true" [rows]="5" id="table" >
+    <p-treeTable [value]="list"  [paginator]="true" [rows]="5" id="table" >
       <ng-template pTemplate="header" let-columns>
       <tr> 
-        <th *ngFor="let col of cols" [ttSortableColumn]="col.field">
-        {{col.header}}
-        <p-treeTableSortIcon [field]="col.field"></p-treeTableSortIcon>
+        <th *ngFor="let col of cols" [style]='col.style'>
+          {{col.header}}
         </th>
       </tr>
       </ng-template>
       <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
         <tr>
-          <td>
-              <p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler>
-              <a style="color: #106DB6;">{{rowData.name}}</a>
+          <td><p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler><a (click)="detailUnit(rowData.id)" style="color: #0160AE; cursor: pointer;">{{rowData.name}}</a></td>
+          <td>{{rowData.short_name}}</td>
+          <td>{{rowData.code}}</td>
+          <td>{{rowData.status==1?'Hoạt động':'Không hoạt động'}}</td>
+          <td>{{rowData.parent_id==null?'Tổ chức cha':'Tổ chức con'}}</td>
+          <td style="text-align: center">
+            <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(rowData.id)" style="cursor: pointer;"/>
           </td>
-          <td>{{rowData.size}}</td>
-          <td>{{rowData.type}}</td>
         </tr>
       </ng-template>
       <ng-template pTemplate="paginatorleft" let-state>
@@ -44,34 +45,6 @@
         {{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}
       </ng-template> 
     </p-treeTable>
-
-    <p-table [value]="array_empty" [paginator]="true" [rows]="10" id="table">
-      <ng-template pTemplate="header" let-columns>
-        <tr>
-            <th *ngFor="let col of cols" [style]='col.style'>
-              {{col.header}}
-            </th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-list>
-          <tr>
-              <td><a (click)="detailUnit(list.id)" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
-              <td>{{list.short_name}}</td>
-              <td>{{list.code}}</td>
-              <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td>
-              <td>{{list.parent_id==null?'Tổ chức cha':'Tổ chức con'}}</td>
-              <td style="text-align: center">
-                <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(list.id)" style="cursor: pointer;"/>
-              </td>
-          </tr>
-      </ng-template>
-      <ng-template pTemplate="paginatorleft" let-state>
-        <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-      </ng-template>
-      <ng-template pTemplate="paginatorright" let-state>
-        <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-      </ng-template> 
-    </p-table>
   </div>
 </div>
  
