--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -35,7 +35,7 @@
 
     <div class="location-change" [ngStyle]="changeDisplay()">
       <div class="sample-contract__information--user-sign" style="line-height: 25px">
-        <div style="text-align: center; font-weight: bold" class="label" (click)="tL()">CÁC BÊN LIÊN QUAN</div>
+        <div style="text-align: center; font-weight: bold" class="label">CÁC BÊN LIÊN QUAN</div>
         <!--        <div *ngFor="let d of this.isPartySignature">-->
         <!--          <div>{{d.name}}</div>-->
         <!--        </div>-->
