--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -145,10 +145,15 @@ h3{
 //}
 .content_footer{
   text-align: center;
-  margin: 10px;
   color:#0160AE;
-  font-size: 13px;
   font-weight: 500;
+  width: 100%;
+  height: 25px;
+  padding: 3px;
+  bottom: 0;
+  position: fixed;
+  background-color: lavender;
+  z-index: 100000;
 }
 
 //popup
