--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
-    <p-treeTable [value]="list"  [paginator]="true" [rows]="5" id="table" >
+    <p-treeTable [value]="list" id="table" [autoLayout]="true">
       <ng-template pTemplate="header" let-columns>
       <tr> 
         <th *ngFor="let col of cols" [style]='col.style'>
@@ -38,13 +38,11 @@
           </td>
         </tr>
       </ng-template>
-      <ng-template pTemplate="paginatorleft" let-state>
-        <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-      </ng-template>
-      <ng-template pTemplate="paginatorright" let-state>
-        {{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}
-      </ng-template> 
+      
     </p-treeTable>
+    <div class="footer_page_number">
+      {{'chart.number' | translate}}: {{total}}
+    </div> 
   </div>
 </div>
  
