--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -60,7 +60,10 @@
     font-size: 10px;
     font-weight: 600;
   }
-
+  .p-treetable-toggler {
+    width: 1rem !important;
+    height: 1rem !important;
+  }
   .p-paginator .p-paginator-pages .p-paginator-page{
     color: black;
     float: left;
@@ -96,4 +99,8 @@
     border-width: 0;
   }
 }
-  
+.footer_page_number{
+  color: #0160AE;
+  padding: 8px 16px;
+  text-align: right;
+} 
