--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -2,6 +2,7 @@
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div class="btn_footer">
     <div class="label">
+<!--      !this.datas.coordination_complete && !view-->
       <button *ngIf="!this.datas.coordination_complete && !view" type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
       <button *ngIf="!this.datas.coordination_complete && !view" type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
     </div>
