--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -130,6 +130,9 @@
                <div class="input-data">
                   <input type="text" formControlName="phoneKpi">
                </div>
+               <div *ngIf="submitted && f.phoneKpi.errors" class="invalid">
+                <div *ngIf="f.phoneKpi.errors.pattern">Số điện thoại sai định dạng</div>
+              </div>
              </div>
            </div>
            <div class="row">
