--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-3 btn_search">
-      <button class="btn btn-lg btn-block">{{'btn.search' | translate }}</button>
+      <button class="btn btn-lg btn-block" (click)="search()">{{'btn.search' | translate }}</button>
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
