--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -152,7 +152,7 @@ h3{
   padding: 3px;
   bottom: 0;
   position: fixed;
-  background-color: lavender;
+  background-color: #f3f8fe;
   z-index: 100000;
 }
 
