--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -106,7 +106,8 @@
         </div>
         <div>
           <span class="title-contract">File đính kèm:</span>
-          <span *ngFor="let d of this.datas.i_data_file_contract, let i = index">
+<!--          this.datas.i_data_file_contract-->
+          <span *ngFor="let d of getFileAttach(), let i = index">
               <a style="color: #106DB6" rel="stylesheet" href="{{d.path}}" target="_blank">
                 {{d.filename}}
               </a>
@@ -117,7 +118,7 @@
           <span class="title-contract">Hợp đồng liên quan:</span>
           <span *ngFor="let d of this.datas.is_data_contract.refs, let i = index" style="color: #106DB6">
             <a style="color: #106DB6" rel="stylesheet" href="#" target="_blank">
-              {{d.ref_id}}
+              {{d.ref_name}}
             </a>
             <span>{{i == (this.datas.is_data_contract.refs.length - 1) ? '' : ', '}}</span>
           </span>
