--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -111,7 +111,8 @@
               <a style="color: #106DB6" rel="stylesheet" href="{{d.path}}" target="_blank">
                 {{d.filename}}
               </a>
-            <span>{{i == (this.datas.i_data_file_contract.length - 1) ? '' : ', '}}</span>
+<!--            <span>{{i == (this.datas.i_data_file_contract.length - 1) ? '' : ', '}}</span>-->
+            <span>{{i == (getFileAttach().length - 1) ? '' : ', '}}</span>
             </span>
         </div>
         <div>
