--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -330,7 +330,7 @@
                 <img src="assets/img/border_close.svg" alt="close.vn">
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
               </div>
-              <div *ngIf="getPartnerSignature(item).length == 1" class="col-md-1 delete-element"></div>
+              <div *ngIf="getPartnerSignature(item).length == 1 && this.getPartnerCoordination(item).length == 0" class="col-md-1 delete-element"></div>
             </div>
             <div class="participants--add">
               <u class="label text-color" style="color: #106DB6" (click)="addPartnerSignature(item, id)">{{'btn.add.user.sign' | translate}}</u>
