--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -90,7 +90,7 @@
           <span> Không hoạt động</span>
       </div>
       <div class="col-md-2">
-        <button class="save-button" (click)="updateInforUser()">Cập nhật</button>
+        <button class="save-button" (click)="updateUser()">Cập nhật</button>
       </div>
   </div>
    </div>
@@ -121,7 +121,7 @@
             <img class="hidden_img" (click)="addFileAttach()" src="assets/img/img-icon.svg" width="30" height="30" />
           </div>
           <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="save-button" (click)="updateSignFileImageUser()">Lưu lại</button>
+            <button class="save-button" (click)="updateUser()">Lưu lại</button>
           </div>
         </div>
         
@@ -163,7 +163,7 @@
              </div>
            </div>
            <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="save-button" (click)="updateSignKpiUser()">Lưu lại</button>
+            <button class="save-button" (click)="updateUser()">Lưu lại</button>
           </div>
          </div>
          </form>
@@ -184,7 +184,7 @@
              </div>
            </div>
            <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="save-button" (click)="updateSignHsmUser()">Lưu lại</button>
+            <button class="save-button" (click)="updateUser()">Lưu lại</button>
           </div>
          </div>
          </form>
