--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -12,7 +12,7 @@
       <img src="../../assets/img/icon_search.svg" class="input-img" />
       <input type="text" id="search" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}"
              (keyup)="autoSearch($event)" />
-      <img src="../../assets/img/icon_search_group.svg" class="input-img"  (click)="open(modal_filter)"/>
+      <img src="../../assets/img/icon_search_group.svg" class="input-img"  (click)="searchContract()"/>
     </div>
   </div>
 
@@ -89,58 +89,6 @@
   </div>
 
 </div>
-
-<ng-template #modal_filter let-modal >
-  <div class="popup_content">
-    <div class="row">
-      <div class="col-md-10">
-        <h4 class="popup_title">{{'contract.search' | translate}}</h4>
-      </div>
-      <div class="col-md-2 popup_close">
-        <span (click)="modal.dismiss('Cross click')">×</span>
-      </div>
-    </div>
-    <hr>
-    <div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="label_item">{{'contract.type' | translate}}</div>
-          <div class="input-group">
-            <input type="text" [(ngModel)]="filter_type" class="form-control"/>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="label_item">{{'contract.number' | translate}}</div>
-          <div class="input-group">
-            <input type="text" [(ngModel)]="filter_contract_no" class="form-control"/>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="label_item">{{'createdate.start' | translate}}</div>
-          <div class="input-group">
-            <ngx-datepicker [(ngModel)]="filter_from_date" [options]="options" class="date-picker"></ngx-datepicker>
-            <img src="assets/img/db_calendar.svg" class="input-img-calendar">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="label_item">{{'createdate.end' | translate}}</div>
-          <div class="input-group">
-            <ngx-datepicker [(ngModel)]="filter_to_date" [options]="options" class="date-picker"></ngx-datepicker>
-            <img src="assets/img/db_calendar.svg" class="input-img-calendar">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="text-align: center; padding-top: 10px;">
-      <div class="col-md-12">
-        <button type="button" class="btn btn-outline-dark btn_close" (click)="modal.close('Save click')">Hủy bỏ</button>
-        <button type="button" class="btn btn-outline-dark btn_submit" (click)="modal.close('Save click'); search()">Tìm kiếm</button>
-      </div>
-    </div>
-  </div>
-</ng-template>
 
 <!-- Popup notification signup -->
 <ng-template #modalNotifi let-modal >
