--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -26,7 +26,7 @@
                   </div>
                   <div>{{'user.information' | translate }}</div></div>
               </button>
-              <button ngbDropdownItem class="drop" (click)="open(modalResetPassword)">
+              <button ngbDropdownItem class="drop" (click)="resetPassword()">
                 <div style="display: flex; align-items: center;">
                   <div class="db_user">
                     <div class="db_password"></div>
@@ -83,115 +83,5 @@
   </div>
 </div>
 
-<!-- Popup reset password -->
-<ng-template #modalResetPassword let-modal >
-  <div class="popup_content">
-    <div class="row">
-      <div class="col-md-10">
-        <h4 class="popup_title">{{'login.reset_password_new' | translate }}</h4>
-      </div>
-      <div class="col-md-2 popup_close">
-        <span (click)="modal.dismiss('Cross click')">×</span>
-      </div>
-    </div>
 
-    <hr>
-    <div>
-      <form [formGroup]="resetPasswordForm" class="mx-auto">
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-10">
-            <div class="label_item">{{'login.password_old' | translate }}</div>
-            <div class="form-input-line">
-              <img src="../../assets/img/login_password.svg" class="form-input-img">
-              <input
-                [type]="fieldTextTypeOld ? 'text' : 'password'"
-                class="form-input-text"
-                formControlName="passwordOld"
-              />
-              <div class="form-icon-password">
-                  <i
-                    class="fa"
-                    [ngClass]="{
-                      'fa-eye-slash': !fieldTextTypeOld,
-                      'fa-eye': fieldTextTypeOld
-                    }"
-                    (click)="toggleFieldTextTypeOld()"
-                  ></i>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-10">
-            <div class="label_item">{{'login.password_new' | translate }}</div>
-            <div class="form-input-line">
-              <img src="../../assets/img/login_password.svg" class="form-input-img">
-              <input
-                [type]="fieldTextTypeNew ? 'text' : 'password'"
-                class="form-input-text"
-                formControlName="passwordNew"
-              />
-              <div class="form-icon-password">
-                <i
-                  class="fa"
-                  [ngClass]="{
-                    'fa-eye-slash': !fieldTextTypeNew,
-                    'fa-eye': fieldTextTypeNew
-                  }"
-                  (click)="toggleFieldTextTypeNew()"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-10">
-            <div class="label_item">{{'login.password_new.confirm' | translate }}</div>
-            <div class="form-input-line">
-              <img src="../../assets/img/login_password.svg" class="form-input-img">
-              <input
-                [type]="repeatFieldTextTypeNew ? 'text' : 'password'"
-                class="form-input-text"
-                formControlName="confirmPasswordNew"
-              />
-              <div class="form-icon-password">
-                <i
-                  class="fa"
-                  [ngClass]="{
-                    'fa-eye-slash': !repeatFieldTextTypeNew,
-                    'fa-eye': repeatFieldTextTypeNew
-                  }"
-                  (click)="toggleRepeatFieldTextTypeNew()"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-        <div class="row" style="padding-top: 10px;">
-          <div class="col-md-1"></div>
-          <div class="col-md-10">
-            <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-              <strong>{{errorDetail}}</strong>
-            </p>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-        <div class="row" style="text-align: center; padding-top: 10px;">
-          <div class="col-md-12">
-            <button type="button" class="btn btn-outline-dark btn_close" (click)="modal.close('Save click')">{{'btn.cancel' | translate }}</button>
-            <button type="button" class="btn btn-outline-dark btn_submit" (click)="sendResetPassword(); status==0 ? modal.close('Save click'):0">{{'btn.sendRequest' | translate }}</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</ng-template>
 
